# rustyx

./: .gitignore  Cargo.toml  README.md  rustyx.toml
src/: main.rs  rustyx.rs
src/config/: config.rs
src/handlers/: mod.rs  proxy.rs  serve_file.rs
src/http/: body.rs  mod.rs  request.rs  response.rs
