[package]
name = "Rustyx"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"